# pepeunit_backend

./: .dockerignore  .env_example  .gitignore  .gitlab-ci.yml  .pre-commit-config.example.yaml  Dockerfile  DockerfileLoad  Makefile  README.md  alembic.ini  config.py  entrypoint.sh  gunicorn_conf.py  pyproject.toml  sonar-project.properies  sonar-project.properties
alembic/: env.py
alembic/versions/: 2024_03_30_0307-582e2e8a4b15_add_tables.py  2024_04_29_2134-8e84c4f4d99a_init.py  2024_05_07_0214-93b4283135ae_add_repo_fld.py  2024_05_07_0348-ec67a994a505_add_unit_fld.py  2024_05_10_0135-5279f6e19c5c_add_permission.py  2024_05_11_1610-873752e42534_add_tbot.py  2024_05_11_1613-7aa0ae7ba8c5_add_nullable_user.py  2024_05_11_1714-e1b5afc3adfc_del_code.py  2024_06_17_0250-38a938ad90f8_repo_autoupdate_add_commit.py  2024_07_12_2312-7e8f41d35420_permission_edge.py  2024_07_14_1941-a45e1c0df0d3_add_unit_node_creator.py  2024_07_15_1941-c235784f8b05_add_del_cascade.py  2024_07_26_1533-65d5397ec7cf_init.py  2024_07_27_2053-596cb7cbb087_refactor_permission.py  2024_07_28_0344-56e0d4eca5b9_add_edge_creator.py  2024_07_28_0359-f0a9fd3812ec_del_update_freq.py  2024_12_10_1303-f7530b7880cc_add_compilable.py  2024_12_21_1041-2ebd38494b2c_add_update_state.py  2024_12_24_0104-36d74c0a988b_add_storage_state.py  2025_01_03_1441-9ff9ece8a699_del_unit_node_agent.py  2025_01_25_0739-199c13471f04_update_time_node.py  2025_02_11_0804-c8284720446d_aes_cbc_to_gcm.py  2025_05_15_0210-36edfe9f8fb0_data_pipe_init.py  2025_06_27_0107-21a3d2806b9c_repository_registry.py  2025_06_27_0127-b4aada6f12c2_repo_migration.py  2025_06_27_0143-8e1f15b235c8_repo_migration_to_registry.py  2025_06_28_1150-30509dc2da85_releases_to_registry.py  2025_06_28_1407-a926d6066d20_del_double_fld_repos.py  2025_07_01_0016-b4648160f78e_del_double_fld_repos.py  2025_07_05_1533-4a0d3bc6e94a_creds_for_registry.py  2025_07_09_1311-934f56855401_repo_clear.py  2025_08_23_0051-069d51ae42a8_org_name.py  2025_09_01_0008-cd843038fae8_dashboards.py  2025_09_02_0106-3a47b8943f6f_dashboards_sync.py  2025_09_04_0047-4ab0c9c39dfc_user_add_grafana_id.py  2025_09_09_0059-b552dfb75bb7_add_force.py  2025_09_14_0103-5276216fd8d3_postges_version_change.py  2025_11_14_0721-99db704045c6_max_edge_per_node.py
app/: __init_.py  __init__.py  main.py  pytest.ini
app/api/api_v1/: endpoints.py
app/configs/: bot.py  clickhouse.py  config.py  db.py  emqx.py  errors.py  gql.py  logging_config.py  redis.py  rest.py  sub_entities.py  utils.py  uvicorn_runner.py
app/core/: config.py  db.py  enum.py  models.py
app/core/auth/: unit_auth.py  user_auth.py
app/domain/: __init__.py  dashboard_model.py  dashboard_panel_model.py  link_unit_node_model.py  panels_unit_nodes.py  panels_unit_nodes_model.py  permission_model.py  repo_model.py  repository_registry_model.py  test_model.py  unit_input_model.py  unit_model.py  unit_node_edge_model.py  unit_node_model.py  unit_output_model.py  user_model.py
app/dto/: enum.py  mixin.py  repository_registry.py
app/dto/agent/: abc.py
app/dto/clickhouse/: aggregation.py  last_value.py  log.py  n_records.py  orm.py  time_window.py
app/modules/devices/: api.py  crud.py  models.py  nodes.py  relations.py
app/modules/input/: models.py  sql_models.py
app/modules/output/: sql_models.py
app/modules/repo/: api.py  api_models.py  crud.py  examples.py  sql_models.py  utils.py  validators.py
app/modules/unit/: api.py  api_models.py  crud.py  examples.py  sql_models.py  utils.py  validators.py
app/modules/user/: api.py  api_models.py  crud.py  enum.py  examples.py  models.py  sql_models.py  utils.py  validators.py
app/repositories/: base_repository.py  dashboard_panel_repository.py  dashboard_repository.py  data_pipe_repository.py  enum.py  git_local_repository.py  git_platform_repository.py  git_repo_repository.py  grafana_repository.py  panels_unit_nodes_repository.py  permission_repository.py  repo_repository.py  repository_registry_repository.py  unit_log_repository.py  unit_node_edge_repository.py  unit_node_repository.py  unit_repository.py  user_repository.py  utils.py
app/routers/v1/: endpoints.py  grafana.py  metrics_router.py  permission_router.py  repo_router.py  repository_registry_router.py  unit_node_router.py  unit_router.py  user_router.py
app/schemas/bot/: __init__.py  base_bot_router.py  dashboard_bot_router.py  error.py  info.py  repo.py  repo_bot_router.py  repository_registry_bot_router.py  start_help.py  unit_bot_router.py  unit_log_bot_router.py  unit_node_bot_router.py  utils.py  verification.py
app/schemas/gql/: mutation.py  query.py  type_input_mixin.py  utils.py
app/schemas/graphql/: mutation.py  query.py  user.py
app/schemas/mqtt/: manager.py  state.py  topic.py  utils.py
app/schemas/pydantic/: grafana.py  metrics.py  pagination.py  permission.py  repo.py  repository_registry.py  shared.py  unit.py  unit_node.py  user.py
app/services/: access_service.py  grafana_service.py  metrics_service.py  permission_service.py  repo_service.py  repository_registry_service.py  thread.py  unit_node_service.py  unit_service.py  user_auth_service.py  user_service.py  utils.py  validators.py
app/services/auth/: auth_service.py  authorization_service.py  test_auth_service.py  test_authorization_service.py
app/utils/: access.py  utils.py  validators.py
app/validators/: data_pipe.py  data_pipe_user_csv.py
clickhouse/migrations/: 001_init.sql  002_unit_logs_change_schema.sql  003_data_pipe_tables.sql  004_data_pipe_drop_uuid.sql
docs/schema/: ca_schema.drawio
llm/: go_container_idea.md
sql/pud/: get_edges_unit_node_by_uuid.sql  get_user_with_tg.sql
tests/: check_grafana_api.py  entrypoint.sh  pytest.ini
tests/client/: config.py  mqtt.py
tests/data/toml/: bad_general_items_pepeunit.toml  bad_general_text_pepeunit.toml  bad_size_pepeunit.toml  bad_syntax_pepeunit.toml  pepeunit.toml
tests/data/yaml/: data_pipe_aggregation.yaml  data_pipe_all_number.yaml  data_pipe_all_text.yaml  (+3 more)
tests/integration/: conftest.py
tests/load/: load_test_mqtt.py  locustfile.py  readme.md
(+59 files in other folders)
