[tool.poetry]
name = "pepeunit-backend"
version = "0.2.0"
description = "Pepeunit - Federated IoT Platform"
authors = ["Ivan Serebrennikov <admin@silberworks.com>"]
license = "AGPL v3 License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.9"
fastapi = ">=0.95.0"
sqlmodel = ">=0.0.8"
uvicorn = ">=0.21.1"
python-dotenv = ">=1.0.0"
asyncpg = ">=0.27.0"
alembic = ">=1.10.2"
psycopg2-binary = ">=2.9.5"
httpx = ">=0.23.3"
uuid = ">=1.30"
python-multipart = ">=0.0.6"
minio = ">=7.1.15"
pyjwt = ">=2.7.0"
fastapi-filter = ">=0.6.0"
filetype = ">=1.2.0"
jinja2 = ">=3.1.2"
pyaes = ">=1.6.1"
gitpython = ">=3.1.40"
fastapi-mqtt = ">=1.2.0"
strawberry-graphql = ">=0.220.0"
aioredis = ">=2.0.1"
gunicorn = ">=21.2.0"
aiogram = "^3.6.0"
pydantic-settings = "^2.2.1"
toml = "^0.10.2"
setuptools = "^70.0.0"
dill = "^0.3.8"
fastapi-utilities = "^0.2.0"
pytest = "^8.2.2"
pytest-asyncio = "^0.23.7"
paho-mqtt = "^2.1.0"
prometheus-fastapi-instrumentator = "^7.0.2"
cryptography = "^44.0.0"
psutil = "^7.0.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.8.0"
black = "24.8.0"
isort = "5.13.2"

[tool.black]
line-length = 120
target-version = ['py310']
skip-string-normalization = true
include = '\.pyi?$'
force-exclude = '''
/(
    alembic/versions
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_trailing_comma = true
filter_files=true
skip_glob = ["alembic/versions/*"]
skip_gitignore = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
