[project]
name = "pepeunit-backend"
version = "0.9.0"
description = "Pepeunit - Federated IoT Platform"
authors = [
    {name = "Ivan Serebrennikov", email = "admin@silberworks.com"}
]
license = {text = "AGPL v3 License"}
readme = "README.md"
requires-python = ">=3.13.7"
dependencies = [
    "fastapi>=0.95.0",
    "sqlmodel>=0.0.8",
    "uvicorn>=0.21.1",
    "python-dotenv>=1.0.0",
    "asyncpg>=0.27.0",
    "alembic>=1.10.2",
    "psycopg2-binary>=2.9.5",
    "httpx>=0.23.3",
    "uuid>=1.30",
    "python-multipart>=0.0.6",
    "minio>=7.1.15",
    "pyjwt>=2.7.0",
    "fastapi-filter>=0.6.0",
    "filetype>=1.2.0",
    "jinja2>=3.1.2",
    "pyaes>=1.6.1",
    "gitpython>=3.1.40",
    "fastapi-mqtt>=1.2.0",
    "strawberry-graphql>=0.220.0",
    "gunicorn>=21.2.0",
    "aiogram>=3.6.0",
    "pydantic-settings>=2.2.1",
    "toml>=0.10.2",
    "setuptools>=70.0.0",
    "dill>=0.3.8",
    "fastapi-utilities>=0.2.0",
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "paho-mqtt>=2.1.0",
    "prometheus-fastapi-instrumentator>=7.0.2",
    "cryptography>=44.0.0",
    "psutil>=7.0.0",
    "cachetools>=5.5.2",
    "clickhouse-migrations>=0.8.1",
    "clickhouse-driver>=0.2.9",
    "redis>=5.2.1",
    "pyyaml>=6.0.2",
    "pepeunit-client>=0.10.6",
    "pathspec>=0.12.1",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.8.0",
    "ruff>=0.13.2",
]
load = [
    "paho-mqtt>=2.1.0",
    "httpx>=0.28.1",
    "tqdm>=4.67.1",
    "psutil>=7.0.0",
    "locust>=2.33.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.uv.sources]
pepeunit-client = { index = "testpypi" }

[tool.ruff]
line-length = 79

target-version = "py313"

exclude = [
    ".git",
    ".ruff_cache",
    ".venv",
    "__pycache__",
    "dist",
    "build",
    "alembic/versions",
    "tests",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "Q",   # flake8-quotes
    "C90", # mccabe
    "B008", # flake8-bugbear
    "B028", # flake8-bugbear
    "DTZ", # flake8-datetimez
    "PL",  # pylint rules
    "PERF", # perflint
    "S",   # flake8-bandit (security)
    "A",   # flake8-builtins
    "COM", # flake8-commas
    "PIE", # flake8-pie
    "PT",  # flake8-pytest-style
    "RET", # flake8-return
    "SLF", # flake8-self
    "TID", # flake8-tidy-imports
    "T20", # flake8-print
    "EM",  # flake8-errmsg
    "EXE", # flake8-executable
    "FA",  # flake8-future-annotations
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    "G",   # flake8-logging-format
    "INP", # flake8-no-pep420
    "ERA", # eradicate
    "PD",  # pandas-vet
    "PGH", # pygrep-hooks
    "PLR", # pylint refactor
    "PLW", # pylint warnings
    "PLE", # pylint errors
]

ignore = [
    "E501",  # line too long
    "B008",  # Do not perform function calls in argument defaults
    "B006",  # Do not use mutable data structures for argument defaults
    "SIM115", # with for files (for lock work disable)
    "PLR0913", # too many arguments to function call
    "PLR0912", # too many branches
    "PLR2004", # magic value used in comparison
    "PLW0603", # using the global statement
    "S105",   # hardcode password
    "S101",   # use of assert detected
    "S307",   # insecure eval
    "S608",   # sql inject
    "S311",   # standard pseudo-random generators are not suitable for cryptographic purposes
    "S603",   # subprocess call - check for execution of untrusted input
    "TID252", # relative imports banned
    "COM812", # missing trailing comma
    "ISC001", # implicitly concatenated string literals over continuation line
    "ERA001", # commented out code
    "G004",   # logging uses f-string
    "INP001", # import implict
    "PLC0415", # top level import
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",    # assert в тестах это нормально
    "S311",    # random в тестах это нормально
    "PLR2004", # magic values в тестах это нормально
    "TID252",  # relative imports в тестах
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
force-single-line = false
